--- a/4/0_origin/css/style.css
+++ b/4/0_origin/css/style.css
@@ -1,447 +1,490 @@
-/*--
-Author: W3layouts
+/*
+Author: W3layout
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
---*/
-/* reset */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
-article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
-ol,ul{list-style:none;margin:0px;padding:0px;}
-blockquote,q{quotes:none;}
-blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
-table{border-collapse:collapse;border-spacing:0;}
-/* start editing from here */
-a{text-decoration:none;}
-.txt-rt{text-align:right;}/* text align right */
-.txt-lt{text-align:left;}/* text align left */
-.txt-center{text-align:center;}/* text align center */
-.float-rt{float:right;}/* float right */
-.float-lt{float:left;}/* float left */
-.clear{clear:both;}/* clear float */
-.pos-relative{position:relative;}/* Position Relative */
-.pos-absolute{position:absolute;}/* Position Absolute */
-.vertical-base{	vertical-align:baseline;}/* vertical align baseline */
-.vertical-top{	vertical-align:top;}/* vertical align top */
-nav.vertical ul li{	display:block;}/* vertical menu */
-nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
-img{max-width:100%;}
-/*end reset*/
-body{
-	background: url(../images/bg.jpg) no-repeat 0px 0px;
-	background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-	font-family:'Bitter', serif;
+*/
+
+/*--reset--*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+dl,
+dt,
+dd,
+ol,
+nav ul,
+nav li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
-h1{
-	font-size:50px;
-	margin-top:45px;
-	text-align:center;
-	color:#fff;
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
-.main{
-	padding:50px 0;
+
+ol,
+ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
 }
-.form-module {
-	position: relative;
-	width:60%;
-    margin: 0 auto;
+
+blockquote,
+q {
+    quotes: none;
 }
-.w3_login_module{
-	min-height: 475px;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
-.form-module .toggle {
-    cursor: pointer;
-    position: absolute;
-    top: -23px;
-    left: 0;
-    color: #ffffff;
-    font-size: 12px;
-    line-height: 30px;
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.clearfix {
+    clear: both;
+}
+
+/*--start editing from here--*/
+
+a {
+    text-decoration: none;
+}
+
+.txt-rt {
+    text-align: right;
+}
+
+/* text align right */
+
+.txt-lt {
+    text-align: left;
+}
+
+/* text align left */
+
+.txt-center {
     text-align: center;
-    opacity: 9999999;
 }
 
-.form-module .form {
-  display: none;
-  padding: 40px;
-}
-.form-module .form:nth-child(2) {
-  display: block;
-}
-.form-module h2 {
-    margin: 0 0 1.5em;
-    color: #212121;
-    font-size: 1.2em;
-    font-weight: 400;
-    line-height: 1;
-}
-.form-module input[type="text"],.form-module input[type="password"],.form-module input[type="email"] {
-  outline: none;
-  display: block;
-  width: 100%;
-  border: 1px solid #d9d9d9;
-  margin: 0 0 20px;
-  padding: 10px 15px;
-  box-sizing: border-box;
-  font-weight: 400;
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
-  font-size:14px;
-}
-.form-module input[type="text"]:focus,.form-module input[type="password"]:focus,.form-module input[type="email"]:focus {
-  border:1px solid #94DCEB;
-  color: #333333;
-}
-.form-module input[type="submit"] {
-	background:#84C639;
-	width: 100%;
-	border: 0;
-	padding: 10px 15px;
-	color: #ffffff;
-	-webkit-transition: 0.3s ease;
-	transition: 0.3s ease;
-	font-size:14px;
-	font-weight:bold;
-	cursor:pointer;
-	text-transform:uppercase;
-}
-.form-module input[type="submit"]:hover {
-  background:#FAC718;
+/* text align center */
+
+.float-rt {
+    float: right;
 }
 
-.main-w3 h2{
-	text-align:center;
-	color:#fff;
-	font-size:3em;
-	margin:0 0 1em;
-}
-.main-left-agileits{
-	float:left;
-	width:33%;
-	border-top-left-radius:5px;
-	border-bottom-left-radius:5px;
-}
-.top-img-agile{
-	background: url(../images/1.jpg) no-repeat 0px 0px;
-	background-size:cover;
-	min-height:200px;
-}
-.top-img-agile2{
-	background: url(../images/2.jpg) no-repeat 0px 0px;
-	background-size:cover;
-	min-height:200px;
+/* float right */
+
+.float-lt {
+    float: left;
 }
 
-.text-agileinfo {
-    background: #FFC107;
-    padding: 15px;
+/* float left */
+
+.pos-relative {
+    position: relative;
 }
-.text-agileinfo h3{
-	text-align:center;
-	font-size:20px;
-	color:#fff;
+
+/* Position Relative */
+
+.pos-absolute {
+    position: absolute;
 }
-.text-agileinfo h4{
-	text-align:center;
-	font-size:16px;
-	color:#33aea6;
-	font-style:italic;
-	margin:10px 0;
-	font-weight:600;
+
+/* Position Absolute */
+
+.vertical-base {
+    vertical-align: baseline;
 }
-.text-agileinfo p{
-	text-align:center;
-	font-size:14px;
-	line-height:25px;
-	color:#fff;
-	margin-bottom:20px;
+
+/* vertical align baseline */
+
+.vertical-top {
+    vertical-align: top;
 }
-.text-agileinfo ul {
-	text-align:center;
+
+/* vertical align top */
+
+nav.vertical ul li {
+    display: block;
 }
-.text-agileinfo ul li{
-	display:inline;
+
+/* vertical menu */
+
+nav.horizontal ul li {
+    display: inline-block;
 }
-.text-agileinfo .fa{
-	color:#33aea6;
+
+/* horizontal menu */
+
+img {
+    max-width: 100%;
 }
-.main-right-w3l{
-	float: left;
-    width: 55%;
-    padding: 1em 3em;
-   background: rgba(255, 255, 255, 0.86);
-	position:relative;
+
+/*--end reset--*/
+
+body {
+    font-family: 'Amiri', serif;
+    font-size: 100%;
+    background: url(../images/banner.jpg)no-repeat center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    background-attachment: fixed;
+    text-align: center;
+    position: relative;
 }
-.main-right-w3l h1{
-	text-align:center;
-	width:70%;
-	margin:0 auto;
-	position:relative;
-	font-size:2em;
-	color:#000;
+
+.w3ls-pos {
+    position: absolute;
+    top: 40px;
+    left: 29%;
 }
-.main-right-w3l h1 span{
-	display: block;
-    font-size: 13px;
+
+.w3ls-login {
+    display: -webkit-flex;
+    display: -webkit-box;
+    display: -moz-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 2.8em;
+    font-weight: 300;
+    text-transform: capitalize;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
     letter-spacing: 2px;
-    line-height: 1em;
-   color:#9d9d9d;
-  }
-.main-right-w3l h1:before,.main-right-w3l h1:after{
-	width: 31%;
-    height: 1px;
-    background: #D7D7D7;
-    position: absolute;
-    top: 43%;
-    content: '';
+    margin: 1.2em 1vw;
+    text-align: center;
+    font-family: 'Amiri', serif;
 }
-.main-right-w3l h1:before{
-	left: 0%;
+
+.w3ls-login form {
+    max-width: 500px;
+    margin: 0 5vw;
+    padding: 3.5vw;
+    border-width: 5px 0;
+    box-sizing: border-box;
+    display: flex;
+    display: -webkit-flex;
+    flex-wrap: wrap;
 }
-.main-right-w3l h1:after{
-	right: 0%;
+
+.agile-field-txt {
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+    margin-bottom: 1.5em;
 }
-.main-right-grid-left-w3-agile{
-	float:left;
-	width:50%;
-	text-align:center;
+
+.w3ls-login input[type="email"],
+.w3ls-login input[type="password"] {
+    width: 100%;
+    color: #fff;
+    outline: none;
+    font-size: 17px;
+    letter-spacing: 0.5px;
+    padding: 15px;
+    box-sizing: border-box;
+    border: none;
+    -webkit-appearance: none;
+    font-family: 'Amiri', serif;
+    background: rgba(0, 0, 0, 0.53);
 }
-.main-right-grid-left-w3-agile h3{
-	font-size: 1.1em;
-    color: #000;
-    margin: 0 auto;
+
+.w3ls-login ::-webkit-input-placeholder {
+    color: #fff;
+}
+
+.w3ls-login :-moz-placeholder {
+    /* Firefox 18- */
+    color: #fff;
+}
+
+.w3ls-login ::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #fff;
+}
+
+.w3ls-login :-ms-input-placeholder {
+    color: #fff;
+}
+
+.check1 {
+    text-align: left;
+}
+
+label.check {
+    color: #ededed;
+    letter-spacing: 1px;
+    font-size: 16px;
+    display: inline-block;
+}
+
+.agile_label {
+    text-align: left;
+    margin: 10px 0 0;
+}
+
+.w3ls-login.w3l-sub {
+    margin-top: 1em;
+    flex-basis: 100%;
+    -webkit-flex-basis: 100%;
+}
+
+.w3ls-login input[type=submit] {
+    color: #000000;
+    font-weight: 100;
+    width: 100%;
+    padding: 0.4em 0;
+    font-size: 1em;
     font-weight: 600;
-    width: 45%;
-    padding-bottom: 0.8em;
-    border-bottom: 1px solid #D7D7D7;
-	position:relative;
+    letter-spacing: 2px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: rgba(255, 255, 255, 0.38);
+    font-family: 'Amiri', serif;
+    transition: 0.5s all ease;
+    -webkit-transition: 0.5s all ease;
+    -moz-transition: 0.5s all ease;
+    -o-transition: 0.5s all ease;
+    -ms-transition: 0.5s all ease;
 }
-.main-right-grid-left-w3-agile h3 span{
-	display: block;
-    font-size: 13px;
-      color:#9d9d9d;
+
+.w3ls-login input[type=submit]:hover {
+    color: #fff;
+    box-shadow: 0 20px 5px -10px rgba(0, 0, 0, 0.4);
+    transform: translateY(5px);
 }
-.main-right-grid{
-	margin:2.7em 0 2em;
+
+.w3ls-bot {
+    margin-top: 1em;
+    width: 100%;
 }
-.main-right-grid-left-w3-agile h3:after{
-	background: #D7D7D7;
-    width: 5px;
-    height: 5px;
-    content: '';
-    position: absolute;
-    top: 97%;
-    left: 49%;
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
+
+#particles-js {
+    width: 100%;
+    height: 100%;
 }
-.main-right-grid-left1:nth-child(2){
-	margin:3em 0;
+
+/*--copyright--*/
+
+.copy-wthree {
+    margin: 4em 0 2em;
 }
-.copyright{
-	padding:4em 0 0;
-	text-align:center;
+
+.copy-wthree p {
+    color: #fff;
+    font-size: 14.5px;
+    letter-spacing: 2px;
+    line-height: 1.8;
+    margin: 0 3vw;
 }
-.copyright p {
-    font-size: 15px;
-    font-weight: 600;
-    color: #000;
-    margin: 0 auto;;
-	line-height:27px;
-	width:90%;
+
+.copy-wthree p a {
+    color: #fff;
+    transition: 0.5s all ease;
+    -webkit-transition: 0.5s all ease;
+    -moz-transition: 0.5s all ease;
+    -o-transition: 0.5s all ease;
+    -ms-transition: 0.5s all ease;
+    text-decoration: underline;
 }
-.copyright p a{
-	color:#33aea6;
-	transition:.5s ease-in;
-	-webkit-transition:.5s ease-in;
-	-moz-transition:.5s ease-in;
-	-o-transition:.5s ease-in;
-	-ms-transition:.5s ease-in;
+
+.copy-wthree p a:hover {
+    color: #fff;
 }
-.copyright p a:hover{
-	color:#000;
+
+/*--//copyright--*/
+
+/*--responsive--*/
+
+@media screen and (max-width: 1080px) {
+    .w3ls-pos {
+        left: 22%;
+    }
 }
-/*--- Responsive Code ---*/
-@media screen and (max-width: 1440px){
-	.main-right-w3l {
-		padding: 1em 2em;
-	}
-	.main-left-agileits {
-		width: 36%;
-	}
+
+@media(max-width:1024px) {
+    h1 {
+        font-size: 4.5vw;
+    }
 }
-@media screen and (max-width: 1366px){
-	.main-right-w3l {
-		padding: 1.77em 2em;
-	}
+
+@media(max-width:900px) {
+    .w3ls-pos {
+        left: 16%;
+    }
 }
-@media screen and (max-width: 1280px){
-	.form-module {
-		position: relative;
-		width: 64%;
-	}
+
+@media(max-width:800px) {
+    h1 {
+        font-size: 5vw;
+    }
+    .w3ls-pos {
+        left: 10%;
+    }
 }
-@media screen and (max-width: 1080px){
-	h1 {
-		font-size: 45px;
-	}
-	.form-module {
-		width: 75%;
-	}
-	.main-right-w3l h1:before {
-		left: -2%;
-	}
-	.main-right-w3l h1:after {
-		right: -2%;
-	}
-	.toggle img {
-		max-width: 90%;
-	}
-	.form-module .toggle {
-		top: -18px;
-	}
+
+@media(max-width:736px) {
+    .w3ls-pos {
+        left: 9%;
+    }
 }
-@media screen and (max-width: 1024px){
-	.main-right-w3l {
-		padding: 1.77em 1.9em;
-	}
+
+@media(max-width:667px) {
+    .w3ls-pos {
+        left: 4%;
+    }
 }
-@media screen and (max-width: 991px){
-	.main-right-w3l h1:before {
-		left: -4%;
-	}
-	.main-right-w3l h1:after {
-		right: -4%;
-	}
-	.form-module {
-		width: 79%;
-	}
+
+@media(max-width:600px) {
+    .w3ls-pos {
+        top: 15px;
+    }
 }
-@media screen and (max-width: 966px){
-	.main-right-w3l {
-		padding: 1.77em 1.8em;
-	}
+
+@media(max-width:480px) {
+    h1 {
+        font-size: 7vw;
+    }
+    .w3ls-login form {
+        padding: 7.5vw;
+    }
 }
-@media screen and (max-width: 900px){
-	.main-right-w3l {
-		padding: 1.77em 1.7em;
-	}
+
+@media(max-width:440px) {
+    .parent {
+        display: block;
+    }
 }
-@media screen and (max-width: 800px){
-	h1 {
-		font-size: 40px;
-		margin-top:40px;
-	}
-	.main-right-w3l h1 {
-		font-size: 1.7em;
-	}
-		.main-right-w3l h1:before {
-		left: -5%;
-	}
-	.main-right-w3l h1:after {
-		right: -5%;
-	}
-	.main-right-w3l h1 span {
-		font-size: 12.5px;
-	}
-	.main-right-grid-left-w3-agile h3 {
-		font-size: 1em;
-	}
-	.main-right-w3l {
-		padding: 2.2em 1.1em;
-	}
-	.text-agileinfo h3 {
-		font-size: 18px;
-	}
-	.text-agileinfo h4 {
-		font-size: 15px;
-	}
-	.main-left-agileits {
-		width: 38%;
-	}
-	.form-module {
-		width: 88%;
-	}
-	.main {
-		padding: 30px 0;
-	}
-	.copyright p {
-		font-size: 14px;
-	}
+
+@media(max-width:320px) {
+    h1 {
+        font-size: 1.8em;
+    }
+    .w3ls-login form {
+        padding: 25px 8px;
+    }
+    .w3ls-login input[type="email"],
+    .w3ls-login input[type="password"] {
+        padding: 10px 15px;
+    }
+    .w3ls-login input[type=submit] {
+        color: #000000;
+        font-weight: 100;
+        width: 100%;
+        padding: 0.3em 0;
+    }
+    .w3ls-pos {
+        left: 0%;
+    }
 }
-@media screen and (max-width: 768px){
-	.toggle img {
-		max-width: 80%;
-	}
-	.form-module .form {
-		padding: 34px;
-	}
-}
-@media screen and (max-width: 667px){
-	.main-right-w3l {
-		padding: 2.2em 0.2em;
-	}
-	.main-left-agileits {
-		width: 43%;
-	}
-}
-@media screen and (max-width: 640px){
-	.form-module {
-		width: 95%;
-	}
-}
-@media screen and (max-width: 600px){
-	h1 {
-		font-size: 35px;
-		margin-top: 30px;
-	}
-}
-@media screen and (max-width: 568px){
-	.main-right-w3l {
-		width: 100%;
-		padding: 1em 0em;
-	}
-	.main-left-agileits {
-		width: 100%;
-	}
-	.copyright {
-		padding: 0;
-	}
-}
-@media screen and (max-width: 384px){
-	h1 {
-		font-size: 30px;
-		margin-top: 30px;
-	}
-	.main-right-w3l h1 {
-		font-size: 1.5em;
-	}
-	.main-right-grid-left-w3-agile h3 {
-		font-size: 0.9em;
-	}
-	.copyright p {
-		font-size: 13px;
-	}
-	.toggle img {
-		max-width: 70%;
-	}
-	.form-module .toggle {
-		top: -12px;
-	}
-}
-@media screen and (max-width: 320px){
-	h1 {
-		font-size: 26px;
-		margin-top: 25px;
-	}
-	.form-module {
-		width: 100%;
-	}
-	.form-module .form {
-		padding: 34px 25px 25px 25px;
-	}
-}
+
+/*--//responsive--*/
