--- a/8/css/main.css
+++ b/8/css/main.css
@@ -7,12 +7,12 @@
 
 @font-face {
   font-family: Ubuntu-Regular;
-  src: url('../fonts/ubuntu/Ubuntu-Regular.ttf'); 
+  src: url('../fonts/ubuntu/Ubuntu-Regular.ttf');
 }
 
 @font-face {
   font-family: Ubuntu-Bold;
-  src: url('../fonts/ubuntu/Ubuntu-Bold.ttf'); 
+  src: url('../fonts/ubuntu/Ubuntu-Bold.ttf');
 }
 
 
@@ -22,8 +22,8 @@
 [ RESTYLE TAG ]*/
 
 * {
-	margin: 0px; 
-	padding: 0px; 
+	margin: 0px;
+	padding: 0px;
 	box-sizing: border-box;
 }
 
@@ -148,7 +148,7 @@ iframe {
 }
 
 .container-login100 {
-  width: 100%;  
+  width: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -164,7 +164,7 @@ iframe {
   background-position: center;
   background-size: cover;
   position: relative;
-  z-index: 1;  
+  z-index: 1;
 }
 
 .container-login100::before {
@@ -198,7 +198,7 @@ iframe {
 }
 
 .login100-form-logo {
-  font-size: 60px; 
+  font-size: 60px;
   color: #333333;
 
   display: -webkit-box;
@@ -254,7 +254,7 @@ iframe {
   transition: all 0.4s;
 }
 
-/*---------------------------------------------*/ 
+/*---------------------------------------------*/
 .focus-input100 {
   position: absolute;
   display: block;
@@ -297,7 +297,7 @@ iframe {
   position: absolute;
   top: 40px;
   left: 35px;
- 
+
 
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
@@ -475,5 +475,32 @@ iframe {
   }
 }
 
+body #NETNAM {
+  padding: 0px 20px;
+  width: auto;
+  color: rgba(0, 0, 0, 0.9);
+  position: fixed;
+  background: rgba(255, 255, 255, 0.6);
+  border: none;
+  font-size: 0.8rem;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
+  cursor: pointer;
+  top: 95%;
+  left: 50%;
+  -moz-transform: translate3d(-50%, 0, 0);
+  -ms-transform: translate3d(-50%, 0, 0);
+  -webkit-transform: translate3d(-50%, 0, 0);
+  transform: translate3d(-50%, 0, 0);
+}
 
-
+/*[ util.css ]
+///////////////////////////////////////////////////////////
+*/
+.p-t-30 {padding-top: 30px;}
+.p-b-50 {padding-bottom: 50px;}
+.p-b-41 {padding-bottom: 41px;}
+.p-b-33 {padding-bottom: 33px;}
+.p-t-5 {padding-top: 5px;}
+.m-t-32 {margin-top: 32px;}
