--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
 
 hr {
   width: auto;
-  border: 1px solid white;
+  background-color: white;
+  width: 90%;
 }
 
 a:link {
@@ -33,6 +34,25 @@ body {
   font-weight: 400;
 }
 
+.y-mandatory {
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  height: 100%;
+}
+.element {
+  scroll-snap-align: start;
+  scroll-snap-stop: normal;
+  height: 100%;
+  width: 90%;
+  margin: auto;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  justify-content: center;
+}
 .buttons {
   display: -webkit-box;
   display: flex;
@@ -43,7 +63,8 @@ body {
   -webkit-box-pack: center;
   justify-content: center;
   text-align: center;
-  width: 100%;
+  margin: auto;
+  width: 80%;
 }
 
 .container {
@@ -72,7 +93,7 @@ body {
 
 h1 {
   color: #fff;
-  font-size: 1.1em;
+  font-size: 1.25em;
   font-weight: 900;
   margin: 0 0 1em;
 }
@@ -91,7 +112,7 @@ h1 {
 
 @media (min-width: 900px) {
   h1 {
-    font-size: 5.25em;
+    font-size: 4.25em;
     margin: 0 0 1em;
   }
 }
@@ -524,6 +545,9 @@ button::before, button::after {
   justify-content: center;
   padding: 1em;
   text-align: center;
+  width: 90%;
+  height: 100%;
+  margin: auto;
   isolation: isolate;
 }
 
