--- a/style.css
+++ b/style.css
@@ -1233,7 +1233,8 @@ a.animated-button.thar-four:before {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  padding: 40px;
+  padding: 10px;
+  padding-top: 40px;
   opacity: 1;
   z-index: -2;
   -moz-transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
@@ -1251,6 +1252,7 @@ button.mfp-arrow {
 .modal-header {
   padding: 2px 16px;
   color: white;
+  text-align: center;
 }
 
 .modal-body {
